--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .env
+sample-data
 
 # Created by https://www.toptal.com/developers/gitignore/api/go
 # Edit at https://www.toptal.com/developers/gitignore?templates=go
